@@ -1,14 +1,7 @@
-* support for installing binary (pre-compiled), platform-dependent gems.  This already works as long as you pick the right gem manually, but I'd like the remote installer to intelligently select the right one and for the installer to throw an error (or a warning) if you attempt o install (e.g.) a Windows gem on a linux system.
+* support for installing binary (pre-compiled), platform-dependent gems.  This already works as long as you pick the right gem manually, but I'd like the remote installer to intelligently select the right one and for the installer to throw an error (or a warning) if you attempt o install (e.g.) a Windows gem on a linux system.  Requires a lot of data to be collected on platform dependency fulfillment.
 * syncing gem repositories
 * optional dependencies: "semitar can use REXML, but it works better if you have the ruby raptor library installed",  or not so optional as in: "you need Ruby/RSS > = 1.0 OR rss > 0.91 for this library to work"
 * ri data generation
 * Integration with platform-native packaging systems
-
-DONE:
-- some kind of versioning change (mauricio, eivind, or jim's idea(s)) should go into 0.5 for feedback/testing
-- Group gem search output when multiple versions exist for a given gem: 
-  activerecord (0.7.5, 0.7.6, 0.7.7, 0.7.8)
-    Implements the ActiveRecord pattern for ORM.
-- Add arbitrary RDoc-able files via gemspec (not just Ruby source files)
-- Allowing a gem to specify a required ruby version
-- finish removing STDIN/STDOUT dependencies in the lib
+* MD5 summing stuff doesn't work right on the new format (0.8.0+)
+* Rethink testing strategy.  May need to write a document describing how to avoid doing things in unit tests that won't work outside of `pwd`
